[tool.poetry]
name = "baseball-position-matching-sys"
version = "0.1.0"
description = ""
authors = ["leta <hyeok8366@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
